# bazel_spark

./: .bazelrc  .gitignore  MODULE.bazel  WORKSPACE  constants.bzl  environment.yml  extensions.bzl  readme.md  setup.sh
spark/: BUILD
test_pyspark_install/: BUILD  test.py
