###############################################################################
# External dependencies (migrated from WORKSPACE to Bzlmod)
###############################################################################

repos = use_extension("//:extensions.bzl", "repos")
use_repo(repos, "aws_sdk_archive", "hadoop_archive", "spark_archive")